--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "Instructions for <em>Birds of the World</em> Contributors"
+  title: "<em>Birds of the World</em> Contributor Guidelines"
   chapters:
     - index.qmd
     - quickstart.qmd
@@ -20,7 +20,7 @@ book:
     - app7.qmd
 
   page-footer:
-    left: "Instructions for <em>Birds of the World</em> Contributors (v. 15)"
+    left: "<em>Birds of the World</em> Contributor Guidelines (v. 15)"
   site-url: https://birds-of-the-world.github.io/birds-of-the-world/
   repo-branch: main
 
